--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "uuid": "^11.1.0",
